--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
   "name": "@firestitch/calendar",
-  "title": "Calendar",
-  "description": "@firestitch/calendar",
   "version": "12.0.0",
+  "description": "@firestitch/calendar",
+  "keywords": [
+    "angular"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Firestitch/ngx-calendar"
   },
+  "license": "MIT",
   "author": {
     "name": "Firestitch",
     "email": "admin@firestitch.com"
   },
-  "keywords": [
-    "angular"
-  ],
-  "license": "MIT",
   "main": "package/index.js",
   "typings": "package/index.d.ts",
   "scripts": {
-    "package": "cd node_modules/@firestitch/component-tools && npm run cli:package",
-    "package:test": "cd node_modules/@firestitch/component-tools && npm run cli:package:test",
-    "package:publish": "cd node_modules/@firestitch/component-tools && npm run cli:package:publish",
     "demo:build": "cd node_modules/@firestitch/component-tools && npm run cli:demo",
+    "package": "cd node_modules/@firestitch/component-tools && npm run cli:package",
+    "package:publish": "cd node_modules/@firestitch/component-tools && npm run cli:package:publish",
+    "package:test": "cd node_modules/@firestitch/component-tools && npm run cli:package:test",
     "serve": "cd node_modules/@firestitch/component-tools && npm run cli:serve"
+  },
+  "dependencies": {
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/resource-timeline": "^6.1.10",
+    "@fullcalendar/rrule": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.17",
@@ -39,20 +46,33 @@
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
+    "@firestitch/api": "^12.4.0",
+    "@firestitch/autocomplete": "^12.5.1",
+    "@firestitch/autocomplete-chips": "^12.5.8",
     "@firestitch/component-tools": "^12.0.17",
+    "@firestitch/dialog": "^12.4.7",
+    "@firestitch/chip": "^12.0.0",
     "@firestitch/drawer": "^12.0.0",
     "@firestitch/example": "^12.1.1",
+    "@firestitch/file": "^12.17.4",
+    "@firestitch/filter": "^13.0.4",
     "@firestitch/iframe": "^12.0.7",
+    "@firestitch/label": "^12.0.4",
     "@firestitch/lint": "^12.0.18",
-    "@firestitch/menu": "^12.0.1",
+    "@firestitch/menu": "^12.2.3",
     "@firestitch/message": "^12.3.1",
+    "@firestitch/prompt": "^12.1.3",
+    "@firestitch/selectbutton": "^12.0.4",
     "hammerjs": "^2.0.8",
     "lodash-es": "^4.17.21",
     "rxjs": "^6.4.0",
     "typescript": "4.3.5",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.5"
   },
   "engines": {
     "node": ">=6.0.0"
-  }
+  },
+  "title": "Calendar"
 }
