--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firestitch/calendar",
-  "version": "12.0.4",
+  "version": "12.0.5",
   "description": "@firestitch/calendar",
   "keywords": [
     "angular"
@@ -22,13 +22,6 @@
     "package:publish": "cd node_modules/@firestitch/component-tools && npm run cli:package:publish",
     "package:test": "cd node_modules/@firestitch/component-tools && npm run cli:package:test",
     "serve": "cd node_modules/@firestitch/component-tools && npm run cli:serve"
-  },
-  "peerDependencies ": {
-    "@fullcalendar/core": "^6.1.10",
-    "@fullcalendar/daygrid": "^6.1.10",
-    "@fullcalendar/interaction": "^6.1.10",
-    "@fullcalendar/resource-timeline": "^6.1.10",
-    "@fullcalendar/timegrid": "^6.1.10"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.10",
@@ -75,7 +68,12 @@
     "typescript": "4.3.5",
     "zone.js": "~0.11.4",
     "date-fns": "^2.28.0",
-    "date-fns-tz": "^1.3.5"
+    "date-fns-tz": "^1.3.5",
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/resource-timeline": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10"
   },
   "engines": {
     "node": ">=6.0.0"
