--- a/src/tsconfig.lib.json
+++ b/src/tsconfig.lib.json
@@ -3,14 +3,19 @@
   "compilerOptions": {
     "outDir": "../dist/lib",
     "declarationMap": true,
-    "target": "es2015",
-    "module": "es2015",
+    "target": "es2020",
+    "module": "esnext",
     "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "types": [],
+    "lib": [
+      "dom",
+      "es2017"
+    ]
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
