--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firestitch/calendar",
-  "version": "18.0.0",
+  "version": "18.0.1",
   "description": "@firestitch/calendar",
   "keywords": [
     "angular"
@@ -46,25 +46,26 @@
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
-    "@firestitch/api": "^18.0.1",
-    "@firestitch/autocomplete": "^18.0.2",
-    "@firestitch/autocomplete-chips": "^18.0.16",
-    "@firestitch/chip": "^18.0.2",
-    "@firestitch/component-tools": "^18.0.13",
+    "@firestitch/api": "^18.0.4",
+    "@firestitch/autocomplete": "^18.0.3",
+    "@firestitch/autocomplete-chips": "^18.0.22",
+    "@firestitch/chip": "^18.0.11",
+    "@firestitch/component-tools": "^18.0.16",
     "@firestitch/core": "^18.0.1",
     "@firestitch/date": "^18.0.1",
-    "@firestitch/dialog": "^18.0.6",
-    "@firestitch/drawer": "^18.0.0",
+    "@firestitch/datepicker": "^18.0.3",
+    "@firestitch/dialog": "^18.0.8",
+    "@firestitch/drawer": "^18.0.1",
     "@firestitch/example": "^18.0.5",
-    "@firestitch/file": "^18.0.2",
-    "@firestitch/filter": "^18.0.11",
+    "@firestitch/file": "^18.0.3",
+    "@firestitch/filter": "^18.0.21",
     "@firestitch/html": "^18.0.0",
     "@firestitch/iframe": "^18.0.0",
     "@firestitch/label": "^18.0.1",
-    "@firestitch/lint": "^18.0.17",
+    "@firestitch/lint": "^18.0.19",
     "@firestitch/menu": "^18.0.5",
-    "@firestitch/message": "^18.0.0",
-    "@firestitch/prompt": "^18.0.4",
+    "@firestitch/message": "^18.0.2",
+    "@firestitch/prompt": "^18.0.9",
     "@firestitch/selectbutton": "^18.0.5",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
