Update @firestitch packages to version 18.0.2 and add new dependencies for clear, common, form, popover, scroll-picker, skeleton, and store

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@firestitch/autocomplete": "^18.0.5",
     "@firestitch/autocomplete-chips": "^18.0.94",
     "@firestitch/chip": "^18.0.43",
+    "@firestitch/clear": "^18.0.12",
+    "@firestitch/common": "^18.0.11",
     "@firestitch/component-tools": "^18.0.16",
     "@firestitch/core": "^18.0.1",
     "@firestitch/date": "^18.0.11",
@@ -59,14 +61,19 @@
     "@firestitch/example": "^18.0.7",
     "@firestitch/file": "^18.0.17",
     "@firestitch/filter": "^18.2.56",
+    "@firestitch/form": "^18.0.23",
     "@firestitch/html": "^18.0.0",
     "@firestitch/iframe": "^18.0.3",
     "@firestitch/label": "^18.0.15",
     "@firestitch/lint": "^18.0.20",
     "@firestitch/menu": "^18.0.5",
     "@firestitch/message": "^18.0.6",
+    "@firestitch/popover": "^18.0.1",
     "@firestitch/prompt": "^18.0.12",
     "@firestitch/selectbutton": "^18.0.9",
+    "@firestitch/scroll-picker": "^18.0.0",
+    "@firestitch/skeleton": "^18.0.0",
+    "@firestitch/store": "^18.0.0",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
